@@ -281,6 +281,14 @@ class RemotePinTest < Test::Unit::TestCase
     assert_failure already_voided
   end
 
+  def test_successful_inquire
+    authorization = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success authorization
+
+    assert inquire = @gateway.inquire(authorization.authorization, @options)
+    assert_success inquire
+  end
+
   def test_invalid_login
     gateway = PinGateway.new(api_key: '')
     response = gateway.purchase(@amount, @credit_card, @options)
